<resources>
    <string name="app_name">meno</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_to_continue">Login to continue!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="how_are_you">How are you</string>
    <string name="i_m_fine_thank_you">I\'m fine thank you</string>
    <string name="nova">NOVA</string>
    <string name="online">Online</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="person">Person</string>
    <string name="change_group_photo">Change Group Photo</string>
    <string name="change_name">Change Name</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="leave_group">Leave Group</string>
    <string name="change_photo">Change Photo</string>
    <string name="message">Message</string>
    <string name="set_as_admin">Set As Admin</string>
    <string name="remove_from_group">Remove From Group</string>
    <string name="search">Search</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="search_name_email">Search Name Email</string>
    <string name="create">Create</string>
    <string name="group_info">Group Info</string>
    <string name="all_members">All Members</string>
    <string name="admins">Admins</string>
    <string name="tester">Tester</string>
    <string name="ang_ho_t_ng">Đang hoạt động</string>
    <string name="typing_here">Typing here...</string>
    <string name="state_icon_for_online_or_not">State icon for online or not</string>
    <string name="suggested">Suggested</string>
    <string name="profile_image">Profile Image</string>
    <string name="list_users">List Users</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="decline_call">Decline Call</string>
    <string name="accept_call">Accept Call</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_username">Edit Username</string>
    <string name="create_story_button">Create Story Button</string>
    <string name="username">Username</string>
    <string name="notification">Notification</string>
    <string name="notification_image">Notification Image</string>
    <string name="privacy_image">Privacy Image</string>
    <string name="privacy">Privacy</string>
    <string name="photo_image">Photo Image</string>
    <string name="photos_media">Photos Media</string>
    <string name="help_image">Help Image</string>
    <string name="help">Help</string>
    <string name="feedback_image">Feedback Image</string>
    <string name="feedback">Feedback</string>
    <string name="info_image">Info Image</string>
    <string name="about_us">About Us</string>
    <string name="signout_image">Signout Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="test_message">Test Message</string>
    <string name="online_status_image">Online Status Image</string>
    <string name="user_state_image">User State Image</string>
    <string name="input_message">input message</string>
    <string name="record_button">Record Button</string>
</resources>