<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/edit_username"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:autofillHints="hint"
        android:background="@drawable/text_box_underline_selector"
        android:inputType="text"
        android:isScrollContainer="true"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_2sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/_12sdp"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/remove"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/save"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>