<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VideoCallingOutgoingActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_75sdp"
        android:layout_height="@dimen/_75sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:background="@drawable/background_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tester"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@id/imageProfile"
        app:layout_constraintStart_toStartOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/imageProfile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_90sdp"
        android:contentDescription="@string/decline_call"
        android:src="@drawable/ic_baseline_call_end_24"
        app:backgroundTint="@color/decline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>