<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GroupActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_27sdp"
        android:layout_height="@dimen/_27sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_baseline_arrow_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/inputSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true" />

        <ImageView
            android:id="@+id/textAddImage"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_camera"
            app:tint="@color/secondary_text" />

    </FrameLayout>

    <EditText
        android:id="@+id/inputGroupName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_input"
        android:hint="@string/group_name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:paddingHorizontal="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/layoutImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutImage"
        app:layout_constraintTop_toTopOf="@id/layoutImage"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_input"
        android:drawableStart="@drawable/icon_search"
        android:drawablePadding="@dimen/_6sdp"
        android:hint="@string/search_name_email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textShortMessage"
        android:paddingHorizontal="@dimen/_6sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@id/layoutContent"
        app:layout_constraintEnd_toEndOf="@id/inputGroupName"
        app:layout_constraintStart_toStartOf="@id/layoutImage"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"
        tools:ignore="TextContrastCheck" />


    <FrameLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@id/imageBack"
        app:layout_constraintTop_toBottomOf="@id/inputSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary"
            android:indeterminateTintMode="src_atop" />

        <TextView
            android:id="@+id/textErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:textColor="@color/error"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreate"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/inputGroupName"
        app:layout_constraintStart_toStartOf="@id/layoutImage" />


</androidx.constraintlayout.widget.ConstraintLayout>